[gd_scene load_steps=6 format=3 uid="uid://cb3glygsxq7ub"]

[ext_resource type="Texture2D" uid="uid://c6mv0s3o00rdv" path="res://assets/ammo/pistol-ammo.svg" id="1_cu7cq"]
[ext_resource type="Script" path="res://userinterfaces/weapon_stats_menu/weapon_stats_menu.gd" id="1_y8dkc"]
[ext_resource type="Texture2D" uid="uid://co5l8kbcpt6n0" path="res://assets/shop_menu/pierce.svg" id="3_ejur5"]
[ext_resource type="Texture2D" uid="uid://8wy4e4mfumkr" path="res://assets/shop_menu/spread.svg" id="4_oy8ex"]

[sub_resource type="LabelSettings" id="LabelSettings_43ddw"]
line_spacing = 0.0
font_size = 12

[node name="WeaponStatsMenu" type="VBoxContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -139.0
offset_top = 23.0
offset_right = -34.0
offset_bottom = 81.0
grow_horizontal = 0
script = ExtResource("1_y8dkc")

[node name="DescriptionLabel" type="Label" parent="."]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
text = "pew pew pew
"
label_settings = SubResource("LabelSettings_43ddw")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Stats" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AmmoContainer" type="HBoxContainer" parent="Stats"]
layout_mode = 2
size_flags_horizontal = 0

[node name="AmmoTexture" type="TextureRect" parent="Stats/AmmoContainer"]
layout_mode = 2
texture = ExtResource("1_cu7cq")

[node name="AmmoLabel" type="Label" parent="Stats/AmmoContainer"]
layout_mode = 2
text = "5"
label_settings = SubResource("LabelSettings_43ddw")

[node name="PierceContainer" type="HBoxContainer" parent="Stats"]
layout_mode = 2

[node name="PierceTexture" type="TextureRect" parent="Stats/PierceContainer"]
layout_mode = 2
texture = ExtResource("3_ejur5")

[node name="PierceLabel" type="Label" parent="Stats/PierceContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_43ddw")

[node name="SpreadContainer" type="HBoxContainer" parent="Stats"]
layout_mode = 2

[node name="SpreadTexture" type="TextureRect" parent="Stats/SpreadContainer"]
layout_mode = 2
texture = ExtResource("4_oy8ex")

[node name="SpreadLabel" type="Label" parent="Stats/SpreadContainer"]
layout_mode = 2
text = "25"
label_settings = SubResource("LabelSettings_43ddw")
